검색 기능 구현

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -10,7 +10,7 @@
                 <div class="hidden flex-none lg:block">
                     <ul class="menu menu-horizontal">
                         <form th:action="@{/search}" method="get"
-                              class="border rounded-lg flex items-center w-[350px] gap-2 pl-3 pr-1 py-1">
+                              class="border rounded-lg flex items-center w-[350px] gap-2 pl-3 pr-1 py-1 mr-1">
                             <input name="keyword" type="text" class="grow outline-none" placeholder="Search"/>
                             <button type="submit">
                                 <svg
