--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -53,7 +53,7 @@
             </div>
 
             <!--body content-->
-            <div class="min-w-screen min-h-[100vh] mx-3 lg:mx-20 2xl:mx-[400px] mt-10 mb-20">
+            <div class="min-w-screen mx-3 lg:mx-20 2xl:mx-[400px] mt-10 mb-20">
                 <th:block layout:fragment="content"></th:block>
             </div>
         </div>
