--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -59,7 +59,7 @@
                 </label>
             </div>
 
-            <div th:replace="~{form_errors :: formErrorsFragment}"></div>
+            <div th:replace="~{fragments/form_errors :: formErrorsFragment}"></div>
 
             <div class="flex justify-center">
                 <button type="submit" class="btn btn-neutral w-full">회원가입</button>
