--- a/src/main/resources/templates/chordDetail.html
+++ b/src/main/resources/templates/chordDetail.html
@@ -7,7 +7,16 @@
                 <div class="text-zinc-500" th:text="${chord.artist}"></div>
             </div>
 
-            <div class="flex justify-end pt-2">
+            <div class="flex justify-between pt-2">
+                <div class="flex items-center space-x-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                         class="size-6">
+                        <path fill-rule="evenodd"
+                              d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0Zm-5.5-2.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0ZM10 12a5.99 5.99 0 0 0-4.793 2.39A6.483 6.483 0 0 0 10 16.5a6.483 6.483 0 0 0 4.793-2.11A5.99 5.99 0 0 0 10 12Z"
+                              clip-rule="evenodd"/>
+                    </svg>
+                    <div th:if="${chord.author != null}" th:text="${chord.author.username}" class="text-sm"></div>
+                </div>
 
                 <!--코드 수정/삭제 버튼-->
                 <div sec:authorize="isAuthenticated()"
@@ -40,29 +49,18 @@
         <div class="py-20" th:text="${chord.content}"></div>
 
         <div class="flex justify-between border rounded-lg p-3">
-            <div class="flex flex-col items-center space-y-2">
-                <div class="flex items-center space-x-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                         class="size-5">
-                        <path fill-rule="evenodd"
-                              d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0Zm-5.5-2.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0ZM10 12a5.99 5.99 0 0 0-4.793 2.39A6.483 6.483 0 0 0 10 16.5a6.483 6.483 0 0 0 4.793-2.11A5.99 5.99 0 0 0 10 12Z"
-                              clip-rule="evenodd"/>
-                    </svg>
-                    <div th:if="${chord.author != null}" th:text="${chord.author.username}" class="text-sm"></div>
+            <!--등록일, 수정일-->
+            <div class="flex space-x-1">
+                <div class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black py-2 px-3 space-y-0.5 tracking-wider">
+                    <div>등록</div>
+                    <div th:if="${chord.createAt != null}"
+                         th:text="${#temporals.format(chord.createAt, 'yyyy.MM.dd')}"></div>
                 </div>
 
-                <div class="flex space-x-1">
-                    <div class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black p-2 space-y-0.5 tracking-wider">
-                        <div>등록</div>
-                        <div th:if="${chord.createAt != null}"
-                             th:text="${#temporals.format(chord.createAt, 'yyyy.MM.dd')}"></div>
-                    </div>
-
-                    <div th:if="${chord.updateAt != null}"
-                         class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black p-2 space-y-0.5 tracking-wider">
-                        <div>수정</div>
-                        <div th:text="${#temporals.format(chord.updateAt, 'yyyy.MM.dd')}"></div>
-                    </div>
+                <div th:if="${chord.updateAt != null}"
+                     class="flex flex-col items-center justify-center bg-base-200 rounded-lg text-xs text-black py-2 px-3 space-y-0.5 tracking-wider">
+                    <div>수정</div>
+                    <div th:text="${#temporals.format(chord.updateAt, 'yyyy.MM.dd')}"></div>
                 </div>
             </div>
 
