--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -44,6 +44,14 @@
                 </div>
             </div>
 
+            <!-- 코드 지정가능한 가사 한 행 업로드 -->
+            <div id="uploadedLyrics"
+                 class="flex flex-col relative text-xl space-y-10 tracking-widest">
+
+                <!--코드 선택 박스-->
+                <div th:replace="~{fragments/chordSelector :: chordSelector}"></div>
+            </div>
+
             <!--가사 한 행 입력 칸-->
             <label class="input input-bordered flex items-center gap-2">
                 <input type="text" id="content" class="grow text-center"
@@ -51,14 +59,6 @@
                        onkeydown="handleEnter(event)"
                 />
             </label>
-
-            <!-- 코드 지정가능한 가사 한 행 업로드 -->
-            <div id="uploadedLyrics"
-                 class="flex flex-col relative text-2xl items-center space-y-10 tracking-widest">
-
-                <!--코드 선택 박스-->
-                <div th:replace="~{fragments/chordSelector :: chordSelector}"></div>
-            </div>
 
             <div th:replace="~{fragments/form_errors :: formErrorsFragment}"></div>
 
@@ -112,10 +112,10 @@
                     // 코드 표시를 위한 span 생성
                     if (syllable.chord) {
                         const chordSpan = document.createElement('span');
-                        chordSpan.className = 'chord absolute text-[15px] text-green-600 w-full text-center tracking-tighter';
+                        chordSpan.className = 'chord absolute text-[14.5px] font-semibold text-green-600 w-full tracking-tighter';
                         chordSpan.style.top = '-2em'; // 코드가 음절 위에 위치하도록 설정
                         chordSpan.style.left = '50%';
-                        chordSpan.style.transform = 'translateX(-50%)'; // 코드가 음절의 중앙에 위치하도록 설정
+                        chordSpan.style.transform = 'translateX(-40%)';
                         chordSpan.textContent = syllable.chord;
                         syllableSpan.appendChild(chordSpan);
                     }
@@ -140,8 +140,8 @@
                         const syllableRect = syllableSpan.getBoundingClientRect();
 
                         // 셀렉트 박스의 위치를 음절의 왼쪽 중간으로 설정
-                        chordSelector.style.top = `${syllableRect.top + window.scrollY - chordSelector.offsetHeight - 400}px`;
-                        chordSelector.style.left = `${syllableRect.left + window.scrollX - chordSelector.offsetWidth - 120}px`; // 음절 왼쪽 옆, 약간 간격
+                        chordSelector.style.top = `${syllableRect.top + window.scrollY - chordSelector.offsetHeight - 300}px`;
+                        chordSelector.style.left = `${syllableRect.left + window.scrollX - chordSelector.offsetWidth - -90}px`;
 
                         // 기존 코드 선택기를 클릭할 때마다 새로 설정하도록 이벤트 설정
                         chordSelector.onclick = function (e) {
@@ -156,10 +156,10 @@
                                 } else {
                                     // 코드가 처음으로 추가될 경우
                                     const chordSpan = document.createElement('span');
-                                    chordSpan.className = 'chord absolute text-[15px] text-green-600 w-full text-center tracking-tighter';
-                                    chordSpan.style.top = '-2em'; // 코드가 음절 위에 위치하도록 설정
+                                    chordSpan.className = 'chord absolute text-[15px] text-green-600 w-full tracking-tighter';
+                                    chordSpan.style.top = '-1.7em'; // 코드가 음절 위에 위치하도록 설정
                                     chordSpan.style.left = '50%';
-                                    chordSpan.style.transform = 'translateX(-50%)'; // 코드가 음절의 중앙에 위치하도록 설정
+                                    chordSpan.style.transform = 'translateX(-55%)';
                                     chordSpan.textContent = `${syllableObject.chord}`;
                                     syllableSpan.appendChild(chordSpan);
                                 }
