--- a/src/main/resources/templates/fragments/chordSelector.html
+++ b/src/main/resources/templates/fragments/chordSelector.html
@@ -6,31 +6,31 @@
         const chordData = {
             "A 코드": [
                 "A", "A#", "Ab", "Am", "A#m", "Abm", "A7", "Am7", "Asus4", "Asus2",
-                "Amaj7", "A6", "Am6", "A9", "Aadd9", "Adim", "Aaug", "A5", "A13"
+                "AM7", "A6", "Am6", "A9", "Aadd9", "Adim", "Aaug", "A5", "A13"
             ],
             "B 코드": [
                 "B", "B#", "Bb", "Bm", "B#m", "Bbm", "B7", "Bm7", "Bsus4", "Bsus2",
-                "Bmaj7", "B6", "Bm6", "B9", "Badd9", "Bdim", "Baug", "B5", "B13"
+                "BM7", "B6", "Bm6", "B9", "Badd9", "Bdim", "Baug", "B5", "B13"
             ],
             "C 코드": [
                 "C", "C#", "Cb", "Cm", "C#m", "Cbm", "C7", "Cm7", "Csus4", "Csus2",
-                "Cmaj7", "C6", "Cm6", "C9", "Cadd9", "Cdim", "Caug", "C5", "C13"
+                "CM7", "C6", "Cm6", "C9", "Cadd9", "Cdim", "Caug", "C5", "C13"
             ],
             "D 코드": [
                 "D", "D#", "Db", "Dm", "D#m", "Dbm", "D7", "Dm7", "Dsus4", "Dsus2",
-                "Dmaj7", "D6", "Dm6", "D9", "Dadd9", "Ddim", "Daug", "D5", "D13"
+                "DM7", "D6", "Dm6", "D9", "Dadd9", "Ddim", "Daug", "D5", "D13"
             ],
             "E 코드": [
                 "E", "E#", "Eb", "Em", "E#m", "Ebm", "E7", "Em7", "Esus4", "Esus2",
-                "Emaj7", "E6", "Em6", "E9", "Eadd9", "Edim", "Eaug", "E5", "E13"
+                "EM7", "E6", "Em6", "E9", "Eadd9", "Edim", "Eaug", "E5", "E13"
             ],
             "F 코드": [
                 "F", "F#", "Fb", "Fm", "F#m", "Fbm", "F7", "Fm7", "Fsus4", "Fsus2",
-                "Fmaj7", "F6", "Fm6", "F9", "Fadd9", "Fdim", "Faug", "F5", "F13"
+                "FM7", "F6", "Fm6", "F9", "Fadd9", "Fdim", "Faug", "F5", "F13"
             ],
             "G 코드": [
                 "G", "G#", "Gb", "Gm", "G#m", "Gbm", "G7", "Gm7", "Gsus4", "Gsus2",
-                "Gmaj7", "G6", "Gm6", "G9", "Gadd9", "Gdim", "Gaug", "G5", "G13"
+                "GM7", "G6", "Gm6", "G9", "Gadd9", "Gdim", "Gaug", "G5", "G13"
             ]
         };
 
